--- a/public/m/css/base.css
+++ b/public/m/css/base.css
@@ -1,117 +1,42 @@
 body{
-	background:#FFF;
-	font-size:14px;
+	background-color: #fff;
 }
-
-a{
-	color:#000;
-	text-decoration:none;
+/* .mui-scroll-wrapper{
+	margin-bottom: 50px;
+} */
+.mui-icon{
+	color:#fff;
 }
-
-*{
-	margin:0;
-	padding:0;
+.header{
+	background-color: #006699;
+	position: fixed;
 }
-
-ul{
-	list-style:none;
-}
-
-img{
-	vertical-align:top;
-}
-
-.mui-content{
-	background:#FFF;
-}
-
-.footer,.header{
-	background:#006699;
-	
-}
-
 .header .mui-title{
-	color:#FFF;
+	color:#fff;
 }
-
-.header .mui-icon{
-	color:#FFF;
+.header .mui-icon-search{
+	color:#fff;
 }
-
+.footer{
+	position: fixed;
+	background-color: #006699;
+}
 .footer .mui-tab-item{
-	color:#FFF;
+	color:#fff;
 }
-
-.footer .mui-tab-item.mui-active{
+.footer .mui-tab-item .mui-active{
 	color:darkorange;
 }
 
-.mui-scroll-wrapper{
-	top:44px;
-	bottom:50px;
-}
 
-.product{
-	padding:0 10px;
+/* banner */
+.mui-slider{
+	margin-top: 44px;
 }
-
-.product .title{
-	width:100%;
-	margin:10px 0;
+.mui-slider .mui-slider-item a{
+	color:#000;
+	text-decoration: none;
 }
-
-.product .list{
-	
-}
-
-.product li{
-	width:50%;
-	float:left;
-	padding:5px;
-}
-
-.product a{
-	display:block;
-	padding:0 5px;
-	box-shadow:0 0 5px #ccc;
-	overflow:hidden;
-}
-
-.product a img{
-	width:100%;
-}
-
-.product .name{
-	line-height:18px;
-	display:block;
-	color:#8f8f94;
-	text-align:center;
-	padding:6px;
-	height:44px;
-	overflow:hidden
-}
-
-.product p{
-	font-size:12px;
-	text-align:center;
-}
-
-.product p span:first-child{
-	color:#f30;
-	margin-right:2px;
-}
-
-.product p span:last-child{
-	color:#ccc;
-	text-decoration:line-through;
-	margin-left:2px;
-}
-
-.product .buy-now{
-	background:#006699;
-	color:#FFF;
-	margin:0 auto;
-	border:none;
-	display:block;
-	margin-bottom:10px;
+.mui-slider .mui-slider-item img{
+	display: block;
 }
