--- a/public/m/css/category.css
+++ b/public/m/css/category.css
@@ -22,7 +22,7 @@ html,body{
 	height:100%;
 }
 
-.cate-list .items{
+.cate-list a{
 	display:block;
 	height:45px;
 	line-height:45px;
@@ -30,6 +30,8 @@ html,body{
 	background:#FFF;
 	border-bottom:1px solid #e0e0e0;
 	border-right:1px solid #e0e0e0;
+	font-size: 14px;
+	color:#333;
 }
 
 .cate-list .items.active{
@@ -48,12 +50,17 @@ html,body{
 	background:#FFF;
 	overflow:hidden;
 	margin-top:10px;
+	list-style: none;
 }
-
+.cate-list .active{
+	background:#f5f5f5;
+	border-right:1px solid transparent;
+}
 .cont-list .items{
 	float:left;
 	width:33.333%;
 	padding-bottom:5px;
+	font-size: 14px;
 }
 
 .cont-list .items a{
@@ -72,29 +79,6 @@ html,body{
 	font-size:12px;
 	color:#8f8f94;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
