--- a/public/m/css/index.css
+++ b/public/m/css/index.css
@@ -1,43 +1,101 @@
+*{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
 .nav-link{
-	padding:10px;
+	padding: 10px 10px;
 }
 
 .nav-link a{
-	display:block;
-	width:33.333%;
-	float:left;
+	width: 33.3%;
+	float: left;
+}
+.nav-link img{
+	display: block;
+	width: 100%;
 }
 
-.nav-link a img{
-	width:100%;
-	vertical-align:top;
-}
-
+/* 品牌专区 */
 .brand{
-	padding:0 10px;
+	padding: 10px 10px;
+	width: 100%;
+}
+.brand img{
+	display: block;
+	width: 100%;
+}
+.brand ul{
+	margin: 0;
+	padding: 10px 0 10px 0;
+}
+.brand li{
+	list-style: none;
+	width: 25%;
+	float: left;
+}
+.brand img{
+	width: 100%;
+	display: block;
 }
 
-.brand .title{
-	width:100%;
-	vertical-align:top;
+/* 商品布局 */
+.product{
+	width: 100%;
+	padding: 10px;
+	
 }
-
-.brand .list{
-	padding:10px 0;
+.product a{
+	width: 100%;
 }
-
-.brand .list li{
-	width:25%;
-	float:left;
+.product img{
+	width: 100%;
+	display: block;
+	margin: 5px 0;
 }
+.product ul{
+	width: 100%;
+	list-style: none;
 
-.brand .list a{
-	display:block;
 }
-
-.brand .list img{
-	width:100%;
+.product li{
+	width: 50%;
+	padding: 5px;
+	float: left;
 }
-
-
-
+.product li a{
+	display: block;
+	padding: 5px;
+	box-shadow: 0 0 5px #ccc;
+}
+.product li img{
+	padding: 5px;
+}
+.product .name{
+	padding: 8px 8px 0 8px;
+	display: block;
+	font-size: 14px;
+	text-align: center;
+	color:#8f8f94;
+	line-height: 18px;
+	height: 44px;
+}
+.product ul p {
+	font-size: 12px;
+	text-align: center;
+}
+.product ul p span:first-of-type{
+	color:#e93322;
+	margin-right: 2px;
+}
+.product ul p span:last-of-type{
+	text-decoration: line-through;
+	margin-left: 2px;
+}
+.product .buy-now{
+	display: block;
+	margin: 0 auto;
+	background-color: #006699;
+	color:#fff;
+	border-radius: 5px;
+}
