--- a/public/m/css/search-result.css
+++ b/public/m/css/search-result.css
@@ -1,24 +1,17 @@
-.filter {
-	width: 92%;
-	margin: 10px auto 0 auto;
-}
-
-.filter .mui-col-xs-6 {
-	height: 35px;
-	line-height: 35px;
+.price{
+	width: 100%;
+	margin-top: 54px;
+	/* background-color: #efeff4; */
 	font-size: 14px;
+	height: 30px;
+	padding: 0 15px;
+}
+.price span{
+	font-size: 14px;
+}
+.price div{
 	text-align: center;
-	background: #efeff4;
-}
-
-.filter .mui-icon{
-	font-size: 12px;
-}
-
-#refreshContainer {
-	position: absolute;
-	left: 0;
-	top: 44px;
-	bottom: 50px;
-	
+	width: 50%;
+	background-color: #efeff4;
+	line-height: 30px;
 }
