--- a/public/m/css/search.css
+++ b/public/m/css/search.css
@@ -1,59 +1,38 @@
 .container{
-	padding:10px;
+	width: 100%;
+	padding: 10px;
+	margin-top: 44px;
 }
-
-.container .search{
-	width:100%;
-	height:30px;
+.search{
+	width: 100%;
+	height: 30px;
 	border:1px solid #006699;
-	position:relative;
-	margin-bottom:20px;
+	position: relative;
 }
-
-.container .search input[type="text"]{
-	height:28px;
-	line-height:28px;
-	border:none;
-	margin-bottom:0;
-	padding:0 70px 0 10px;
-	font-size:14px;
+.search input[type=text]{
+	width: 100%;
+	height: 28px;
+	font-size: 14px;
+	margin-bottom: 0;
+	border: none;
 }
-
-.container .search input[type="button"]{
-	width:60px;
-	height:28px;
-	position:absolute;
-	right:0;
+.search input[type=button]{
+	position: absolute;
 	top:0;
+	right:0;
+	height: 28px;
+	background: #006699;
+	color:#fff;
 	border:none;
-	background:#006699;
-	border-radius:0;
-	color:#FFF;
+	border-radius: 0;
 }
-
-.container .mui-table-view-cell:after{
-	left:0;
+.title{
+	font-size: 14px;
+	color:#8f8f94;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
-
-.container .title{
-	padding-bottom:10px;
+.title .mui-icon{
+	font-size: 14px;
+	line-height: normal;
 }
-
-.search-bar{
-	text-align:center;
-	width:100%;
-	background:#efeff4;
-	padding:8px 0;
-	font-size:14px;
-	margin-bottom:15px;
-}
-
-#refresh{
-	position:absolute;
-	left:0;
-	width:100%;
-	top:44px;
-	bottom:50px;
-}
-
-
